# sso_micro_arc

./: .gitignore  README.md
actix_bridge/: .gitignore  Cargo.toml  build.rs
actix_bridge/html/: activated.html
actix_bridge/src/: main.rs
actix_bridge/src/data_bridges/: mod.rs
actix_bridge/src/translator/: mod.rs
actix_bridge/src/type_converters/: mod.rs
ekstion_lms/: package-lock.json  package.json  (+1 more)
rust_grpc_idp/: .gitignore  Cargo.toml  build.rs
rust_grpc_idp/migrations/2023-07-06-035753_create_user/: up.sql
rust_grpc_idp/migrations/2023-07-07-084150_create_user/: up.sql
rust_grpc_idp/migrations/2023-07-11-001334_create_user/: up.sql
rust_grpc_idp/migrations/2023-07-13-235009_create_user/: up.sql
rust_grpc_idp/migrations/2023-08-01-132439_create_user/: up.sql
rust_grpc_idp/migrations/2023-08-01-133045_create_user/: up.sql
rust_grpc_idp/migrations/2023-08-15-064600_create_session/: up.sql
rust_grpc_idp/migrations/2023-08-15-101739_create_auth_key/: down.sql  up.sql
rust_grpc_idp/migrations/2023-08-15-113037_create_session/: up.sql
rust_grpc_idp/migrations/2023-08-15-232013_create_session/: up.sql
rust_grpc_idp/proto/: identity.proto
rust_grpc_idp/src/: main.rs  models.rs  schema.rs
rust_grpc_idp/src/authorization/: mod.rs
rust_grpc_idp/src/config/: mod.rs
rust_grpc_idp/src/data/: mod.rs  session.rs
rust_grpc_idp/src/email/: mod.rs
rust_grpc_idp/src/general/: mod.rs
rust_grpc_idp/src/input_validation/: mod.rs
rust_grpc_idp/src/login/: mod.rs
rust_grpc_idp/src/redis_data/: mod.rs
rust_grpc_idp/src/registration/: mod.rs
rust_grpc_idp/src/token/: mod.rs
rust_grpc_idp/templates/: reset_password.hbs  verification_email.hbs
rust_grpc_idp/templates/layouts/: base.hbs
(+28 files in other folders)
