[package]
name = "actix_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tonic = "0.9.2"
prost = "0.11.9"
tonic-web = "0.9.2"
hyper = "0.14.27"
bytes = "1.4.0"
http = "0.2.9"
serde = "1.0.181"
serde_derive = "1.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"