[package]
name = "rust_grpc_idp"
version = "0.1.0"
edition = "2021"
authors = ["Eklemis Santo Ndun <eklemis.ndun@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures = "0.3"
clap = { version = "4.1.4", features = ["derive"] }
tonic-reflection = "0.9.2"
jsonwebtoken = "8.3.0"
bcrypt = "0.15"
regex = "1.9.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.104"
ipnetwork = {version = "0.12.8"}
# DISEL
diesel = { version = "2.0.4", features = ["postgres","chrono"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10.0"
url = "2.4.0"
base64 = "0.21.2"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
rand = "0.8"
chrono = "0.4.26"
lettre = "0.10.4"
handlebars = "4.3.7"
tonic-web = "0.9.2"
#redis
redis = "0.23.1"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.9"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"